apps/couchdb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  labels:
    app: couchdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: couchdb:3.3.3
          ports:
            - containerPort: 5984
          volumeMounts:
            - name: couchdb-data
              mountPath: /opt/couchdb/data
      volumes:
        - name: couchdb-data
          emptyDir: {}
