apps/couchdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: public
  rules:
    - host: couchdb.db.devflux.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couchdb-service
                port:
                  number: 5984
  tls:
    - hosts:
        - couchdb.db.devflux.ru
      secretName: couchdb-tls-secret
